<resources>
    <string name="app_name">Zerbert</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">An app for my girlfriend Katherine</string>
    <string name="nav_header_subtitle">By Wedding Sword Studios</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Buttons</string>
    <string name="menu_random">Pictures</string>
    <string name="menu_vault">Notes</string>
    <string name="love_button_description">Tell your partner you love them!</string>
    <string name="hungry_button_description">Tell your partner you are hungry!</string>
    <string name="sad_button_description">Tell your partner you are sad!</string>
    <string name="angry_button_description">Tell your partner you are angry!</string>
    <string name="horny_button_description">Tell your partner you are horny!</string>
    <string name="baby_button_description">Tell your partner you want a baby!</string>
    <string name="title_activity_settings">Settings\</string>
    <string name="messaging_header">Messaging</string>
    <string name="partner_name_title">Partner Name</string>
    <string name="partner_number_title">Partner Number</string>
    <string name="show_messages_title">Show Messages</string>
    <string name="show_messages_summary_on">Show messages from your partner\'s app</string>
    <string name="show_messages_summary_off">Do not show messages from your partner\'s app</string>
    <string name="messaging_interval_title">Messaging Interval</string>
    <string name="messaging_offline_title">Messaging Offline</string>
    <string name="offline_messaging_summary">Number of offline messages to show when you open the app</string>
    <string name="decrypt_all_title">Decrypt All Notes</string>
    <string name="decrypt_all_summary_on">Nice try; this doesn\'t do anything!</string>
    <string name="notes_header">Notes</string>
    <string name="vault_button_text">unlock</string>
    <string name="random_button_text">next</string>
    <string name="vault_status_invalid">Invalid!</string>
    <string name="vault_status_accepted">Accepted!</string>
    <string name="vault_text_entry_hint">Enter your key here</string>
    <string name="note2_encrypted_text">
        ZqSvfiBcDM1pUxOIHXIp9hzHntB7FScyNwz/TfLqTlhmLf3DlX166t0uxOSsac4JPHcyHLXPK3sWd4Z3U/E6bg4RQz5aZK1qd3skmGSZVQkgCwU2pJ71phFCOazEh/4if5yswSpXdQGFJgDvr82X7ZpETG/GUeMJpzv3ZXdINCFXcw1WgyRFif3xFYbG9aXo5UuCWAVgBP0IGESA98XhoqcYfARXsEqlC4oKN2gC7qUrAcz+tSjhjHE4X7igjhyqimDTqNRg6UhyXmLqDBpmLlqHNAxcCLDfHCpUOQpbfmcEQgPHR5MjfFfne+FG/+l3k98VR/NFrc6HR1TQyuExs3q/ThjPdZ+e9z7NpBzlxaT6jhikaVFcqP54+wG5wOf6tIm/AcPoQOC0hb8Jlcv1S9mx3x96epi0nPfXV7INzJY51qlIkgkEcsSXd4bHmLULPTjQnhVSJb2NpbkNrR/d3Ua/oAUHyRZRgVtyKCbUBPJURbNsrtM6M82zVCn02LPjq5PSAJhNU1+F1LmucV5DHmyXlstsKksxibtVo90jW0jG2AXeN5Hnmiu1ZKynzGkxNWqQYgrHt2jmLvZGzWyXJt2Zs5zJJ3ptLAImm+6yrk+eWsBbaB6Sjf/NE5lOfvvoXRZw70rv9oZmvVXwRcgOFn8E9RL9tmcB3Dy9cEJ6MMcyXa2MwkHQJ1QFayRfkVFKkOVW59Sr6DvKeKhv4x4X6I5gx14WRkHbkCun3mkwoOk8MFBwnnOMLV74xCpgotRHT1153n9FgDmjPgkI8CZxrViwFgQSp1e8RlpnUYot4pC9zd6xaKmTxV8+z/TLQeISiQNKrxMUq7VUssOxnfBPAYXzv2KgdvEa5I5OR7ibBpHOQmuwRsF+fzm0Nogk+BRJuwY+53t4JJXBfsvA5ZCCWaW47PoPnssImxNljnV/QELshYNwu7plr+WQTIuYcGCeN1fRUS9eMMz6Ov4VS/e5FfHF+IbRUGlVely1RjBj7JLsoN+R6iqsyIKuJ++DziE/jPplevmB2LWP4W/0MeZsTQxW/hsflt8EuDZhbZ458NdVR5S7CG3vrjf5WsNJfmb+mlBgT/iQsPfCwIFfsUo1FCSw14YHNTxdvS7SWmspt/u8p6GkD2BoYR/6NyfbgJu0WxTRknBh9U0a4QulZlcaGVqgoVuHJppxHEI3yDGmVxPQXbmwrD3dYuKo/BhVLNQtxg+u3rR/9v3w8kaP2ls6UhGAn2iCzT07w538v85sAFcus0pTXD5GkEggFs9884AVsKpPZEFxIlZWl6hcrHxgnNay1RLkx+pIGmzzg5jA0fRBTdDrNnpXV56NyHiCtnRI+hcgRlhsXIahVljexU8MdGjkD6406xj1hZT3iXJB7VVphxOPIw/X/Z8ZYJUhAm1vD2qt7ZQEPJXuZ6Dw/tUXS7GudbRWysz3FsRG3kO4hOqphNYJUvXSfh031cdSHnfQLWXTF8g/OvQQW/4QetCPzhdzLgmAK2wnZg4tqhfhALvVVa6Oy8EBPfgooe9xG/dJV76DpmHAy6IC0MDKf1B8LlQP4uYb+PHJ+AGpUKIhxFzr1EBIebLEB+3hMIaDhl/+P7NQDb9e1exkN8gpIqewlQ==
    </string>
    <string name="note2_hash">
        60b826b92b184b997c0f1f07a72ceacb2bc26046
    </string>
    <string name="note3_encrypted_text">
        doPp+OA11TOw9zybcq+O5qq0DrDpf/MU29+Wdo+uO+wluur8PkASyQadd9PJxFbHMA/Ilunj1BIe55k6zyPsiNDfjCRZVKKTWMa6P+gAdOqWqT3kutzeAcUOg7JHLWFjod8g4UD+x/QSY0x1IqXjEP+kBJ7S+1/BBUj60Vb9VVusKfnIlXv+8s2wppTLtehjFQuoPvb8+m7Jc/HnTPwnSUKOr/Hp7xYt23o9ZiD234o4WCqIt8IJ+TAV/9SxCEJ0B18jGUHRlgQADhpCvRUHk8RkyUetCEJ7eqpe0ZWoZ4+vla+QQhQ7zfk5AzNMvTE0oCv0jA0FhTR1wjzoHWuLNVeLvNPjJXMFJI8Iot4n4xGldkI44DZeVfdMUcR1qYquTjyuGmKH/7cd1+OfPfHgKXV5ZP6KndEFezXUyZhlit9Ik20V2tY1Jp+dCdbuqOW9ONJgbrbodXgvcQZEcs+85dbJ9KYAjBQmBJRxCWiLHpiH0KFz5yxtfLb+/LMY2oInN4UIBoHSBvUncB4O9ucuhTcdSf+YihiwAOPOBY9VMNc2MrhdOoMEZa3bvNNqmFQgJheFeUWkybo+iTTDhbVo6V6Ngvk7cc7F2UOgTgxL19FNwrBFwkDLL4eU75mFaDsh8jkizVLziDUZ5g5laWc8Apk7VyejT0DhVGB3flycgOWwFYMCB2rM6+KKUMJk099j4p/HB3aKBl596JfhXxmdMVBy6O+i2Xl7h3jrfj8umN4ksFLtmDvya2Busc2nCQl/4Pkr9FCVxs/tAGOecP0HE61rOlLjhWbb5G5ram4PYx8LYaKHsj3xJ+JOavTaM8xSthF65X5lWm7k6REl47RlZtRfypOQekhCefC2/LaybZoWbcw6ffBqLoD3AvUJ0jyEASuMv+4Qa3rYBbxGmmp3uCBhr/VaKR43oTUP1RFiX33Ni4SXymDNiu/4+xNvzU2lYTO3OFSP8Kd2tiwkwuXDjJZJEl7ftxVWja94z7mng92awwefdnKneHsxQc0UfxYZy8qOi1F4Mr+WRrBE3a1Q92MuA0N7XwIEbb4oRHs79sCdQpnffVr0VbCxbaHNiQ2hAZc/i9T/INNJMwW3k9seTnojvttbvPg7wroaudD1r0s/uiw9dpbHX2saRKlZ/yQ0B3oK0OaOKECTZHXcUAKOnbvxU4IF9FwJzsfcdY7YY9O4U5rVxOgFdro+Evw5jIBf8DK36StcS88iMtzpkVKXr0YkrTKExk3+B+W0k628nyYydVnxs/0ZPPd3FJYAbc49iEZ07eU4zIcs7tClE3OB5BmnqfCcLA2hJAFSJB8Ur1Tn5QXNAYOL84OSwNrUX3L+AHI0Camm20BdVK0azYAEc6yuXLPuI6OsvsTsOAGebu3ZgPoMCHtfBQUCo5T+6A9OmktSon9OEvCq/wiSZU/58ZaNKw+i33vZcZ39CA64YrXzvTDAyvy9+Vje/mq869ucTg0LcmICeAV8zwwqqDIZKNfvp8QFDNpsyoNzF5YlP/GRw19fyNhMcf5Moyxv6gVaOINSckq/z0lOX1o7Mw/r7u8qvZMv4GhoahL86YqbEovSiBbylHb/qfDiv8pM2+mqD8DNma5E3KdzMUOt6DlWCqjXZHg01+/hxRhNQq0KlkGeSvPov9tjDqAe4W8dYtObhxOAZ8wNlyf1dWeJjqWrMCQdldHSyb9en/qxvmORPMnUR11ESwm4VMLvHXFcncbCEEG0SGhKrjkmoA+P3+taOc0eGTp2zDSy4ox9ROjpTYmFXwKq0d4WbK/d4QAUdCUkiBRpASd+bwdFydSStH+QHGs8DKpHJx5qoBpXfM+tnSKVgrHac+3R9TM+BUHmLVj78vXsV98D7RzBjiaF+ItRnltpyrQQNGShl2Y+amneoV6uvGlaPeOM48VlPDHat2tIckuoYoHu2SZ16MTfc/xOz5mHghcdKsh8UNS92b70XoM6zJbOHCdPR/aysg5uL5KJxN/QtCha4kj8IT6Idmmds2i6I4WwZmnwZCyh2WXwCCvCnNUzcL5zQfLG7n3IXjH3zmjMdaVCCcJQ5fDuSd9rlx12HMbYCmS/V3RUkByiP+Sr3y2Sf5fsbf8N1TbHnljij7N+zIzCbLW87uZxTK26XGmUwDV8EgEKhMQpaONc++BYxhg7nwEL/QJdRdci5grqKtndrCGH0IQ/M88q6pjBGoW+WwtEt/j0b+fAgKVePXolD9pJMEE9qFgETsu0h2+K/DiY6IWYzeLpXwqIhq6aqiczrJ+TWj5X4hO620lOG02iEQXj85Qyf8Nr9PNPH473FV6/rSe/s1+f+aCsRzuIKhxpoZ30l8TS9Ip91R24WPvAP74/42/jGXfMZSvzIrQ+AwZ2vvNZ9EevVlGpU3ezBnXl2bo7FIUo3V5s/VPCOpdtMAHo1fz2vc5Cjybu2SMotP6ZPJLsAgcHohw5qj+21AOGURSMHJQ/sS2TKtxUbBX0G4f3A21Inq0B8CFhJUEh46x2OgIKqi6CyGm6LxfDkrHDELDnMQRzuFJe+SKTTeoqDvPoNg/XxLZ56l0gCM4W79/PZ/H2+3Ffv7OFR87XRz77ZAgrH88s4TrQEIQ+PoM=
    </string>
    <string name="note3_hash">
        3b9485db2dc69c4bc5f98a6925b66b18d75791ad
    </string>
    <string name="note4_encrypted_text">
        XaZ6dOxmB15jgTLLT/kzIffjl0DB2Xebme811M/xcfQCCArmV01Igoetq1DZMGCKDF80hXWN5l3lEMnltsL9kQ==
    </string>
    <string name="note4_hash">
        ccc21bbf4d07f1b8cb8cf0564605e8e0741a7be8
    </string>
    <string name="note5_encrypted_text">
        wcrVzMA2CU91kfoyVPX0oHYwR3sJs15/oCFWGhZSCPI=
    </string>
    <string name="note5_hash">
        d0ff78482f2f5e829f9295adb15ac73712cef079
    </string>
    <string name="note6_encrypted_text">
        VzfesL8jXpI+tc+4JTUdrNhzKnNznoktAH4Vk0ltekKeocx3Fp1zVXW6NR9vf3i7cIkyTI5yLXiLk5vUuaOSnyFlm0TCOk5xh10vcZKJLUw=
    </string>
    <string name="note6_hash">
        623026780a09bb103b09d9278125b005ee47f71d
    </string>
    <string name="note7_encrypted_text">
        kF8u8d6DNVmwsFHW0NwYCPcS1WfuPAtTddQUxRutvmrmX56oR3V/SpvVVQAfttPHxAPkGJdubDRevRIBSE1Xkb86QWOurcB3aUXTwQ+oqk1IV8FfbKIMaDwS+0r7a7Sq2WbZz2t7OiD0rk4+S0krzlh9lXItwJRbw5F2iFrLX8SWnfAyB261VEW5GlUVGbI89Om3n0qB7b9nzmCRQa7/O/K4EHJ9sIv1DfwA59Z1jy6efl0236XdPdK4NK0CcVSTSyQ4IUANgg1sWR0/KeyxH0xtze6CH6Auw6xA/Jts43WA3y34sURuQVzKh2Q9yuMd7ctTf824oK7eXLYkJg6N0C7VkXd3e9VqBjacCIcJR/WgbXtSewn1+W9bbnbF00zaiaKzH6fuYX1s5D7WegbgjHj6uqhTQ+Ej0LI4+k63gq5brK5WDn19QKFEwYyJa0gc9Bv3od/3Ip3PPzxutCDHZJ2ShXKwrhe9mc/cd7gB8JudMgSlF5mL6Wtx7aY++hfC87ecrfKCGkocKjk+EWmOtfdsBwsKlT7OLz8uJEyDnTxMqpfMaxDUbvKRB4DMq85QUitXX921xcXSW0ojOVksWLl3cQCrgMvlD/VCKwS9H7zrdm8yHlhN0DtSjBreH9SHghBiFW/a+GRIbskprBLBVQabG9SanhFRryinvXUjLi8Oib+clVpz7GMkwMYNqCzOeGkb5k1pa72oyUV+jf7E6GIiZAkIrrlwQ79Xo1iwSA4NpD63nK2IKZrZVhFodQINqNY3M7t2fov/LptyEiKUaFTJYkAjHNsI+GrH5sv11uTOOU31TFlbo7lShuqn0OHwaJAS/KhONnuY/582W8DWnzp0CeLdDoSwGmlCBdE3Lb8kUPhubBpLOYlvGSWfeROh0PI5FjfeJ7cN/D9PQxZBf4UaByXAjS0JlPYtTAr0ewNUbUlRR7XuS+7xIBPPHRd4eCQQXRbdwOUCg+kzncdfd+slf9BKdpAjoko+JKCuFS6TuZ2gAYl3NlW8Lt7zGN3aTHSNd8fCYUSGucmDDN9lNoLHgIjCNlatLqbQAJ0JnMEtXfjaFIPdyu5Jf0oVAAFvWUfkXYfT+pueikdq+FFA+VgVDLxv1h02jVFJ++r420UwpacCQfDATXZZRP/PnT1GiuoxgccZNDO8OzNWaLt2Yq+T2zgmBYSmFZ2Xt9dQItIMzRK/3BvbYaPUYKpNGPIPSdMPj8KlVLAtI9SOomZhrCkvcj3M+la3JLLraYr+ZryZnDDK3q1Kv2iFzxl7CgocyO3r/BDHHER9eEJYVrLlh7HSxGAj6tyiHcsTKdaoQO5272b24SrEk/8A5W6rEQy0etCsxSMBwGzwTjQuJJZSCu13aAtEdncsT7qTonueqrY61vjs7uyY3shNpIHEfJsUFMgrP2nTCSfbbtYSY4P2w+qnxEnhHz/JYkRMmXXSjYzh19atcjJvSwm/rrk3qcnVGBcw9thdsXk4r3ygiTnp869azSzhhauCqRPL+6eelJiPOelUgZsPauWAWVCb5emy0TU6mxLbSziXxjcUmYFmshauGjx3jvsag1dpE0QvFVOogXrIFDrLNRdd/CY2KTKZC9XLTaOFM4fFitM9YK61SH8dCsSRXVUxFZIll5OYxXiSbQcWY93f2YEwaqDiJnlr0hUSvjqH7P/s9LY59c/OWCKjLqaIQIXUqmrXSFpw6KQjCDjAZhkSPc/39SZwg8IhIxOp3DozVjf5srBACi3+oBI6L6EDUHMMG/OZc2/teHE+lTvID4Vt3PudPvy53hJFlBlfHcS+YZS3lCHFqy5ru2W/13/NJfpf8pkqvb2tD1LvIuch3R1XFnafF71dY/0q1ZSdOnqLyuRH115DllBnGX+66u5Cqn9FZJg/GxWsS5+3JkOplPnJqa8yaQjnbgKR
    </string>
    <string name="note7_hash">
        fef5d355f0edbaab64fa8ebb91d227ad1999114c
    </string>
    <string name="note8_encrypted_text">
        c4pmefJmZiXXgNrSPVV81y1bQl2uusDH/fLfQFx+4C1zL3/B8SoIRX+04eb7Y8BzZGdSvNzFwYk4Xe3s5EZuEaNrs7xumrQXNRXhNon0kGHgHw7UanKc4ah/ddspM1V5i6iXLCsuZsoiIg68+02K5CC6TJLAjZ67KU0/zHsEjM0UEoXgByI505s5QjGBRq3oEoifoRQxnDdQUm0g2RqKTpeY/dMzU9zqGBvNCM11jXjVAjGRf0KaVO77HOl+aVSXtfADeAd/Zfxk3QszeMUVcV0KqeJyqfx5mPn4Z/amF44yekJsrKr6MChSJcQ5epWWzQSdHVevGIdbO+I+4YaEpcgBceUTLWMjt+iLjfGmc33EPR9M5angfx76VaJ7HXX9BagvmUeJu+BQ1j52JuAoDcXNa4nwABLpMLuqsvzBdSiFVXS0KzZrrajICnHs3Fac6sNGue8NTMvnbF/FSZRKmsZZ4XZnpPRrWwi+SFyc9uzLCMZQc7BpVkQmzZKewLMVjXBpSK5aEYFd8j4IXbobGXQcxNDfa+IjFKH/wl4gBioaHRpH0p29ZXFLBSCnvBqSldVRsFpWtHjqrMORNrIF2ZmIVg3pzJvx9ISDiTF+toVK0sPq/kqGxEa8q8/Fn/KaPfXV+bSv9JwFRnEV0jtRFERD63PlmCFe/eTMYFlf0z6ycj8WAybCn2/8WhvdmB7iYiUVtwZIt1wuTJnnOAXG3RzpMLVlCfS174fuW2RiNiG+o7ENURFU/p5YvQ8SG8YEzcJIYtuGnD7+DdfVcPKHrrraxOFT3FGc/2eg3zgO1cbxP05QeDsjklsRoEkusOQSev8Vhhl+0So5UyiG0MG0u5zrhejy87Xd0MUJ8yussGKc0gzCyw7CBrxBtINXgMchrIaq7YfXEUro4VE3kJBiYJ/gNz1SRw6Zs3TPVSNX8AFxPe3jIZp9TXO1PxA3ssqQriVe3bLj5mcc5RNObCahVftAn4Ti7CN7oSSYiwkDv9T9gyG8weJEYwtuM/MwzJ46TWLsI8vRdLBd6gFJWSW7WcMY+dwMdLMGhFTITZwsyIyQPfiCo4/pEMRxvBRIuRFOrEyAlpEeGRkXMRKF8JKBhgzuNfKftXXu+TAN6HUdvJ1MoV55lvf/8GDnO9ICoTBTlXRAEDWyA+gsktoFKb11TifwfT6vAQlHcSvPCLapr4oIFiPELgAH/hzAvAiHRAExSEL4fR44COJNsGo0TbsgfZ3pqWBdt7a+dgvLRcq2ufrMjo+KgO/XK0F+2zOQTFiYkhY8Tni7sRAD6TpXTz2G2/XkGaHugWpvuFeBzzw1WUdGYyEwuimboqVDv2AkvEpCGW1yV38lJuHt4w9pHXJW0oIY07x9aCFWe2q1egT0m2JhxjVR7RQ9F6mJsDPkGoQSxR4TtOaedB3hxppa4CXFzsMeYIw89oo+V0RBnZoDAb245AGgb70yNnU8AvF9C16lia1Ih+MzJxizu6pGkor4gZ9q7eZADi8+XKORFLfZ0Rb3NcM3Z1PKow2OZv9wwzXybTZUKTrGPD4LyT1kjYu7Ig0wo9wMrU23nllbz07yfzIjV46QF0MdB93u6hhzL9RNj8Jlgi2UvvR/9riSpJlwBr4po0fvSKAjQN+90wlrhlUqVo4WB1vY6KyB9XQAMMfkDzTtfrn/nKsKSAJ9ZHviOH5fDBwhtC/lAcHZETyxx5a1+Uor0TtoJ+AfCJ5zjf8fGskgnX+qDwPfAjOjSS+Fu9oaY6XO4QBXUhKhcMO7o/HYzqqelBDNWTZTv9dGvTP5OTizZuWIw1UBIB1517eIqn71cmYZJL39PAGGyOiKciUAXPiABubXNaG5HvXblnfJzKA4AO7o6n/uWZqOvqodZjIygYs4js/F2z5zM4RzAP9X6Tz/4OovyzqFivU8Qb2uomSwOtVXH1671QPx2dGQUE4y1+SXXMlQ73tGjaRujOj+dYGlsY8pF44Y5dUoJuJruCmZYOXYiSoP2lMt3+rhMg==
    </string>
    <string name="note8_hash">
        721272b109846395c13b3cdf7e5224fcda8208c8
    </string>
</resources>