<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kenmurrell.zerbert.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_random"
        android:name="com.kenmurrell.zerbert.ui.random.RandomFragment"
        android:label="@string/menu_random"
        tools:layout="@layout/fragment_random" />

    <fragment
        android:id="@+id/nav_vault"
        android:name="com.kenmurrell.zerbert.ui.vault.VaultFragment"
        android:label="@string/menu_vault"
        tools:layout="@layout/fragment_vault" />
</navigation>