<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TableLayout
        android:id="@+id/buttonTable"
        android:layout_width="270dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buttons_grid_border">

        <TableRow
            android:id="@+id/buttonTableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/loveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/love_button_description"
                android:src="@drawable/button_icon_two_hearts_64" />

            <ImageButton
                android:id="@+id/babyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/baby_button_description"
                android:src="@drawable/button_icon_baby_64" />
        </TableRow>

        <TableRow
            android:id="@+id/buttonTableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/hornyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/horny_button_description"
                android:src="@drawable/button_icon_eggplant_64" />

            <ImageButton
                android:id="@+id/angryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/angry_button_description"
                android:src="@drawable/button_icon_angry_eye_64" />
        </TableRow>

        <TableRow
            android:id="@+id/buttonTableRow3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/hungryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/hungry_button_description"
                android:src="@drawable/button_icon_hamburger_64" />

            <ImageButton
                android:id="@+id/sadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/sad_button_description"
                android:src="@drawable/button_icon_rain_64" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>